; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/afs/extr_inode.c_afs_zap_data.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/afs/extr_inode.c_afs_zap_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.afs_vnode = type { %struct.TYPE_4__, %struct.TYPE_3__ }
%struct.TYPE_4__ = type { i32, i32 }
%struct.TYPE_3__ = type { i32, i32 }

@.str = private unnamed_addr constant [8 x i8] c"{%x:%u}\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @afs_zap_data(%struct.afs_vnode* %0) #0 {
  %2 = alloca %struct.afs_vnode*, align 8
  store %struct.afs_vnode* %0, %struct.afs_vnode** %2, align 8
  %3 = load %struct.afs_vnode*, %struct.afs_vnode** %2, align 8
  %4 = getelementptr inbounds %struct.afs_vnode, %struct.afs_vnode* %3, i32 0, i32 1
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 1
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.afs_vnode*, %struct.afs_vnode** %2, align 8
  %8 = getelementptr inbounds %struct.afs_vnode, %struct.afs_vnode* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @_enter(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %6, i32 %10)
  %12 = load %struct.afs_vnode*, %struct.afs_vnode** %2, align 8
  %13 = getelementptr inbounds %struct.afs_vnode, %struct.afs_vnode* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i64 @S_ISREG(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %1
  %19 = load %struct.afs_vnode*, %struct.afs_vnode** %2, align 8
  %20 = getelementptr inbounds %struct.afs_vnode, %struct.afs_vnode* %19, i32 0, i32 0
  %21 = call i32 @invalidate_remote_inode(%struct.TYPE_4__* %20)
  br label %28

22:                                               ; preds = %1
  %23 = load %struct.afs_vnode*, %struct.afs_vnode** %2, align 8
  %24 = getelementptr inbounds %struct.afs_vnode, %struct.afs_vnode* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @invalidate_inode_pages2(i32 %26)
  br label %28

28:                                               ; preds = %22, %18
  ret void
}

declare dso_local i32 @_enter(i8*, i32, i32) #1

declare dso_local i64 @S_ISREG(i32) #1

declare dso_local i32 @invalidate_remote_inode(%struct.TYPE_4__*) #1

declare dso_local i32 @invalidate_inode_pages2(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
